# FPGA_serverless

./: .gitmodules  README.md
Coyote/driver/: fpga_mmu.c
Coyote/hw/: examples.cmake
Coyote2/driver/: fpga_fops.c
Coyote2/sw/: CMakeLists.txt
cpu-benchmarks/: addmul-cpu.yml  aes128ecb-cpu.yml  build.sh  corner-cpu.yml  deploy_all.sh  fft-cpu.yml  gzip-cpu.yml  hls4ml-cpu.yml  hyperloglog-cpu.yml  matmul-cpu.yml  matmul64-cpu.yml  md5x-cpu.yml  nw-cpu.yml  sha256-cpu.yml  sha3-cpu.yml
cpu-benchmarks/addmul-cpu/: Dockerfile  addmul.cpp
cpu-benchmarks/aes128ecb-cpu/: Dockerfile  aes128ecb.cpp
cpu-benchmarks/corner-cpu/: Dockerfile  corner.cpp
cpu-benchmarks/fft-cpu/: Dockerfile  fft.cpp
cpu-benchmarks/gzip-cpu/: Dockerfile  gzip.cpp
cpu-benchmarks/hls4ml-cpu/: handler.py  measure_computation_time.py  quantized_pruned_cnn_model.h5  requirements.txt
cpu-benchmarks/hyperloglog-cpu/: Dockerfile  MurmurHash3.cpp  MurmurHash3.h  hyperloglog-cpu.c  hyperloglog-cpu.cpp  license.txt
cpu-benchmarks/matmul-cpu/: matmul.cpp
cpu-benchmarks/matmul64-cpu/: Dockerfile  matmul64.cpp
cpu-benchmarks/md5x-cpu/: Dockerfile  md5x.cpp
cpu-benchmarks/nw-cpu/: Dockerfile  nw.cpp
cpu-benchmarks/sha256-cpu/: Dockerfile  sha256.cpp
cpu-benchmarks/sha3-cpu/: Dockerfile  sha3.cpp
cpu-benchmarks/util/: util.h
docs/: openfaas-function-deployment.md  openfaas-installation.md  openfaas-patch.md  openfaas-usage.md  private-repo.md
funky-monitor/: configure.sh
funky-monitor/kernel/: GNUmakefile  solo5.h
funky-monitor/scheduler/: index.html
funky-monitor/ukvm/: funky_backend_context.hpp  funky_backend_core.h  funky_backend_core_dummy.cpp  funky_backend_worker.hpp  funky_debug.h  funky_debug_c.h  ukvm-configure  ukvm.h  ukvm_core.c  ukvm_elf.c  ukvm_module_fpga.c  ukvm_module_serverless.c  ukvm_serverless.c  ukvm_serverless.h
funky-monitor2/: .gitignore
funky-monitor2/scheduler/: Makefile  common.c  common.h  daemon.c  primary.c  rest.go
funky-monitor2/tests/: GNUmakefile
funky-monitor2/ukvm/: GNUmakefile  Makefile.ukvm.mod  funky_backend_core.cpp  funky_xcl2.cpp  funky_xcl2.hpp  ukvm_guest.h  ukvm_hv_kvm_x86_64.c  ukvm_main.c  ukvm_monitor.c
funky-unikernel/: CMakeLists.txt
funky-unikernel/automate/: Dockerfile.all  build_banch.sh
funky-unikernel/doc-funky/: build-opencl-apps.md  build-without-scripts.md  migrate-unikernel.md  scheduler.md
funky-unikernel/echo-http/: Dockerfile  echo-http-hello.cpp
funky-unikernel/funky-scripts/: setup_tap_device.sh
funky-unikernel/lib/watchdog/: CMakeLists.txt
funky-unikernel/lib/watchdog/src/: watchdog.cpp
funky-unikernel/serverless/: CMakeLists.txt  build_binaries_nounikernel.sh  src-files.txt
funky-unikernel/serverless/src/: addmul-fpga.cpp  aes128ecb-fpga.cpp  gzip-fpga.cpp  hls4ml-fpga.cpp  sha256-fpga.cpp  watchdog.cpp
funky-unikernel2/: .gitignore
funky-unikernel2/automate/: Dockerfile  Dockerfile.benchs
funky-unikernel2/cmake/: cross_compiled_libraries.cmake
funky-unikernel2/diskimagebuild/: filetree.cpp
funky-unikernel2/doc-funky/: add_new_library.md  solo5_migration.md
funky-unikernel2/echo-http/: CMakeLists.txt  build_ctr_image.sh  echo-http-watchdog.cpp
funky-unikernel2/examples/hello_fpga/: CMakeLists.txt
funky-unikernel2/lib/funkycl/: CMakeLists.txt
funky-unikernel2/lib/funkycl/api/: clCreateCommandQueue.cpp  clCreateContext.cpp  clCreateKernel.cpp  clCreateProgramWithBinary.cpp  clEnqueueMapBuffer.cpp  clEnqueueMigrateMemObjects.cpp  clEnqueueTask.cpp  clGetDeviceInfo.cpp  clGetPlatformIDs.cpp  clReleaseContext.cpp  clReleaseEvent.cpp  clReleaseMemObject.cpp  clRetainContext.cpp  clRetainDevice.cpp  clRetainEvent.cpp  clRetainProgram.cpp  clSetKernelArg.cpp
funky-unikernel2/lib/funkycl/object/: cmd_queue.cpp  cmd_queue.h  device.cpp  device.h  event.cpp  event.h  kernel.h  object.h  platform.h  program.cpp  program.h  refcount.h
funky-unikernel2/serverless/: Dockerfile  build_ctr_image.sh
metrics-collector/: Dockerfile  README.md  fpga_utilization.go  go.mod  main.go
microbenchmarks/: computation_time.csv  computation_time.py  e2e_chaining_20240520T191825.csv  parallelism3.py  parallelism_20240518T120444.csv  parallelism_20240518T124215.csv  parallelism_20240518T130318.csv  plot.py  plot_computationtime.py  plot_e2e_chaining.py  plot_parallelism3.py  plot_reconfig_time.py  plot_stacked_boot_times.py  plot_virt_overhead.py  reconfig_time_20240509T153347.csv  stacked_boot_times.tsv
miscs/evaluation/: README.md  apps_in_bars.tsv  flat_cpu_vs_fpga.tsv  graphs.py  plot.py
simulator/: .gitignore  README.md  baseline_utilization.py  fpga.py  fpga_utilization.py  main.py  newrelic.ini  preprocess.py  process.py  requirements.txt  scheduler.py  simulator.py  test-waiting.csv  test.sh  trace_resampler.py  usage.py  util.py
simulator/benchmarks/: .gitignore  README.md  benchmark.py  benchmark_table.py  characterization_rate_of_change.py  characterized.py  characterized_priority.py  compact.py  fairness.py  keepalive.py  makespan.py  number_of_nodes.py  number_of_nodes_prefer_bitstream_locality.py  placement.py  reconfigurations_per_node.py  scheduler_weights.py  scratch_1.py  utilization.py  visualize_results.py
simulator/evaluation/: .gitignore  (+6 more)
(+237 files in other folders)
